--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "deepmerge": "^2.1.1",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^2.3.1",
