--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^0.1.19",
     "deepmerge": "^2.1.1",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
@@ -51,6 +54,7 @@
     "redux-subscribe": "^1.0.2",
     "redux-thunk": "^2.2.0",
     "webpack": "^4.0.0",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "^3.0.0",
+    "workbox-webpack-plugin": "^3.2.0"
   }
 }
