--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.2.0",
     "react-cookie": "^2.1.6",
     "react-dom": "^16.2.0",
+    "react-id-swiper": "^1.6.5",
     "react-localize-redux": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
