--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.2.0",
     "react-cookie": "^2.1.6",
     "react-dom": "^16.2.0",
+    "react-html-parser": "^2.0.2",
     "react-id-swiper": "^1.6.5",
     "react-localize-redux": "^3.0.2",
     "react-redux": "^5.0.7",
@@ -54,6 +55,7 @@
     "redux-saga": "^0.16.0",
     "redux-subscribe": "^1.0.2",
     "redux-thunk": "^2.2.0",
+    "stream": "0.0.2",
     "webpack": "^4.0.0",
     "webpack-dev-server": "^3.0.0",
     "workbox-webpack-plugin": "^3.2.0"
